# nexus-llm-router

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  DAILY_IMPROVEMENTS.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  SAFETY.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
dashboards/: grafana.json
deploy/prometheus/: prometheus.yml
docs/: EXAMPLES.md  PERFORMANCE.md  PULL_SHARK_LOG.md  TROUBLESHOOTING.md
docs/adr/: ADR-019-async-task-queue.md  ADR-020-database-ORM.md  ADR-023-config-management.md  ADR-025-database-ORM.md  ADR-033-async-task-queue.md  (+5 more)
scripts/: benchmark.py  cost_report.py  create_demo_gif.py  health_check.py  reset_dev_db.sh  train_classifier.py
tests/: __init__.py  test_anthropic_adapter.py  test_api.py  test_budget_aware_strategy.py  test_canary_strategy.py  test_cascade_strategy.py  test_classifiers_and_strategies.py  test_complexity_tier_strategy.py  test_cost_optimal_fallback.py  test_domain_classifier_tiebreak.py  test_epsilon_greedy_strategy.py  test_failover_priority_strategy.py  test_geo_region_strategy.py  test_google_adapter.py  test_http_utils.py  test_latency_aware_fallback.py  test_latency_budget_strategy.py  test_least_busy_strategy.py  test_model_catalog.py  test_openai_compatible_content.py  test_prompt_prefix_cache_strategy.py  test_provider_health_score_blend_strategy.py  test_reliability_strategy.py  test_repo_integrity.py  test_round_robin_strategy.py  test_router_engine.py  test_safety.py  test_semantic_cache_strategy.py  test_slo_aware_strategy.py  test_state_machine.py  test_sticky_session_strategy.py  test_strategy_coverage.py  test_token_budget_strategy.py  test_value_strategy.py  test_weighted_blend_strategy.py
(+47 files in other folders)
